test/spec_vectors/memory_fill/fail/module_8.wat
(module (func (export "testfn") (memory.fill (i32.const 10) (i32.const 20) (i32.const 30))))